add export excel service

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,59 +1,27 @@
-<style type="text/css">
-  body {
-    background-color: #eee;
-  }
-
-  .form-signin {
-    max-width: 330px;
-    padding: 15px;
-    margin: 0 auto;
-  }
-  .form-signin .checkbox,
-  .form-signin .form-signin-heading {
-    margin-bottom: 10px;
-  }
-  .form-signin .checkbox {
-    font-weight: normal;
-  }
-  .form-signin .form-control {
-    position: relative;
-    height: auto;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 10px;
-    font-size: 16px;
-  }
-  .form-signin .form-control:focus {
-    z-index: 2;
-  }
-  .form-signin input[type="password"] {
-    margin-bottom: 10px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-  }
-  footer {
-    display: none;
-  }
-</style>
 <style>
   .header-wrap {
     justify-content: center!important;
     border-bottom: unset!important;
     padding-top: 2rem!important;
   }
-  .header-buttons, .nav {display:none;}
+  .header-wrap .navbar-toggler, .header-wrap .navbar-collapse {display:none!important;}
+  .header-wrap .navbar {
+    justify-content: center;
+    display: flex;
+    background: transparent;
+  }
 </style>
 <div class="form-wrap">
   <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), :html => { class: 'form-signin', method: :put }) do |f| %>
-  <h2 class="form-signin-heading"><%= t('.sign_up', :default => "Новый пароль") %></h2>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
-  <%= f.input_field :password, class: 'form-control' , placeholder: "Password - (#{@minimum_password_length} characters minimum)" %>
-  <%= f.input_field :password_confirmation, class: 'form-control' , placeholder: "Password confirmation" %>
-  <%= f.submit t('.sign_up', :default => "Сохранить"), class: 'btn btn-success' %>
-<% end %>
-<div class="form-sign-help">
-  <%= render "devise/shared/links" %>
-</div>
+    <h2 class="form-signin-heading"><%= t('.sign_up', :default => "Новый пароль") %></h2>
+    <%= render "devise/shared/error_messages", resource: resource %>
+    <%= f.hidden_field :reset_password_token %>
+    <%= f.input_field :password, class: 'form-control' , placeholder: "Password - (#{@minimum_password_length} characters minimum)" %>
+    <%= f.input_field :password_confirmation, class: 'form-control' , placeholder: "Password confirmation" %>
+    <%= f.submit t('.sign_up', :default => "Сохранить"), class: 'btn btn-success' %>
+  <% end %>
+  <div class="form-sign-help">
+    <%= render "devise/shared/links" %>
+  </div>
 
 </div>
