--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -4,7 +4,12 @@
     border-bottom: unset!important;
     padding-top: 2rem!important;
   }
-  .header-buttons, .nav {display:none;}
+  .header-wrap .navbar-toggler, .header-wrap .navbar-collapse {display:none!important;}
+  .header-wrap .navbar {
+    justify-content: center;
+    display: flex;
+    background: transparent;
+  }
 </style>
 <div class="form-wrap">
   <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), :html => { class: 'form-signin', method: :post }) do |f| %>
