--- a/app/views/home/_favorite_doc.html.erb
+++ b/app/views/home/_favorite_doc.html.erb
@@ -190,7 +190,7 @@ data-izb-delete="{{ product.id }}" style="display: none;"&gt;удалить из
         <img src="13.jpg" />
       </li>
       <li class="list-group-item">
-        <span>Регистрируемся на сайте приложения: <a href="http://k-comment.ru/users/sign_up">http://k-comment.ru</a></span>
+        <span>Регистрируемся на сайте приложения: <a href="http://myappda.ru/users/sign_up">MyAppDA</a></span>
       </li>
       <li class="list-group-item">
         <span>Заходим в ЛК, переходим в "Настройки" - "Общая информация"</span>
