--- a/app/views/home/preorder.html.erb
+++ b/app/views/home/preorder.html.erb
@@ -1,8 +1,7 @@
 <div class="container mb-5">
-<h1 class="display-4 text-center text-uppercase mt-5 mb-5">Триггеры -  Предзаказ</h1>
+<h1 class="display-4 text-center text-uppercase mt-5 mb-5">Предзаказ</h1>
 <section class="page-section pt-0">
 <div class="row">
-    <div class="display-6 text-center text-uppercase mb-5">Возможности</div>
     <ol class="list-group list-group-numbered">
         <li class="list-group-item">собираем заявки клиентов с формы предзаказа товара с учетом его варианта</li>
         <li class="list-group-item">создание заказа из заявки с комментарием в заказе по API</li>
