--- a/app/views/layouts/_metrics.html.erb
+++ b/app/views/layouts/_metrics.html.erb
@@ -1,3 +1,4 @@
+<meta name="yandex-verification" content="9ca0d400b06fde8b" />
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z7G7RZZ1FG"></script>
 <script>
