--- a/app/views/client_mailer/emailrestock.html.erb
+++ b/app/views/client_mailer/emailrestock.html.erb
@@ -28,6 +28,6 @@
     <p><%= @shoptitle %></p>
     <p>Спасибо что Вы с нами, хорошего дня!</p>
     <p></p>
-    <p><a href="https://k-comment.ru/" target="_blank" style="color:red;font-style: italic;">Отправлено через сервис "K-comment - помощник нашего магазина"</a></p>
+    <p><a href="https://myappda.ru/" target="_blank" style="color:red;font-style: italic;">Отправлено через сервис MyAppDA</a></p>
   </body>
 </html>
