--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -1,28 +1,35 @@
-<tr class="align-middle">
-    <td>
-        <div class="d-flex flex-column">
-            <%=tag.div class: 'form-check' do %>
-                <%= check_box_tag "client_ids[]", client.id, false, {class: 'checkboxes form-check-input', data: { 'select-all_target': 'checkbox', action: "change->selectall#toggleParent"}, form: :bulk_action_form } %>
-            <% end %>
-            <%=tag.div( client.clientid, class: 'opacity-75 fs-8') if client.clientid %>
-        </div>
-    </td>
-    <td class="fs-8"><%= client.created_at.in_time_zone.strftime('%d/%m/%Y %H:%M')%></td>
-    <td><%= client.fio %></td>
-    <td><%="Телефон: #{client.phone}" if client.phone%></br><%="Email: #{client.email}" if client.email%></td>
-    <%=tag.td do %>
-        <%= link_to client.favorites.count.to_s, client, data: { turbo_frame: "offcanvas_wrap", turbo_stream: true } %>
+<%= turbo_frame_tag dom_id(client, Apartment::Tenant.current), class: "d-table-row" do %>
+    <%= tag.div(class: "d-table-cell border-0 border-top border-light", style: 'width: 130px;') do %>
+        <%= tag.div class: 'form-check py-0' do %>
+            <%= check_box_tag "client_ids[]", client.id, false, { class: 'checkboxes form-check-input ms-0 me-1', data: { 'select-all_target': 'checkbox', action: "change->selectall#toggleParent" }, form: :bulk_action_form } %>
+            <%= link_to arrow_clockwise_icon, update_from_insales_client_path(client), class: "btn btn-sm btn-outline-primary border-0", data: {turbo_stream: true} if client.clientid%>
+            <%= tag.label class: 'form-check-label' do %><%= tag.b(client.id) %><% end %>
+        <% end %>
+        <%= tag.div(client.created_at.strftime('%d/%m/%Y %H:%M'), class: "fs-8 py-0") %>
     <% end %>
-    <%=tag.td do %>
-        <%= link_to client.restocks.count.to_s, client, data: { turbo_frame: "offcanvas_wrap", turbo_stream: true }  %>
+    <%= tag.div class: "d-table-cell border-0 border-top border-light d-flex flex-column" do %>
+        <%= tag.div(client.fio, class: 'pb-0') %>
+        <%= tag.div( "InsID: #{client.clientid}", class: 'opacity-75 fs-8 py-0') if client.clientid %>
     <% end %>
-     <%=tag.td do %>
-        <%= link_to client.preorders.count.to_s, client, data: { turbo_frame: "offcanvas_wrap", turbo_stream: true } %>
-    <% end %> 
-     <%=tag.td do %>
-        <%= link_to client.abandoned_carts.count.to_s, client, data: { turbo_frame: "offcanvas_wrap", turbo_stream: true } %>
-    <% end %>    
-    <td>
-        <%= link_to trash_icon, client, data: { "turbo-method": :delete, 'turbo-confirm': 'Вы уверенны?' }, class:"" %>
-    </td>
-</tr>
+    <%= tag.div class: "d-table-cell border-0 border-top border-light" do %>
+        <%= phone_email(client) %>
+    <% end %>
+    <%= tag.div class: "d-table-cell border-0 border-top border-light" do %>
+       <%= link_to client.orders_count, client, data: { turbo_frame: "offcanvas_wrap", turbo_stream: true }, class: 'pb-0' %>
+    <% end %>
+    <%= tag.div class: "d-table-cell border-0 border-top border-light" do %>
+        <%= link_to client.favorites.count.to_s, client, data: { turbo_frame: "offcanvas_wrap", turbo_stream: true }, class: 'pb-0' %>
+    <% end %>
+    <%= tag.div class: "d-table-cell border-0 border-top border-light" do %>
+        <%= link_to client.restocks.count.to_s, client, data: { turbo_frame: "offcanvas_wrap", turbo_stream: true }, class: 'pb-0' %>
+    <% end %>
+    <%= tag.div class: "d-table-cell border-0 border-top border-light" do %>
+        <%= link_to client.preorders.count.to_s, client, data: { turbo_frame: "offcanvas_wrap", turbo_stream: true }, class: 'pb-0' %>
+    <% end %>
+    <%= tag.div class: "d-table-cell border-0 border-top border-light" do %>
+        <%= link_to client.abandoned_carts.count.to_s, client, data: { turbo_frame: "offcanvas_wrap", turbo_stream: true }, class: 'pb-0' %>
+    <% end %>
+    <%= tag.div class: "d-table-cell border-0 border-top border-light d-flex justify-content-end gap-1 align-items-center ps-2" do %>
+        <%= link_to trash_icon, client, data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: "" %>
+    <% end %>
+<% end %>
