--- a/app/views/clients/_show.html.erb
+++ b/app/views/clients/_show.html.erb
@@ -1,5 +1,5 @@
 <div class="row justify-content-start align-items-center g-2 mt-0">
-  <div class="col-8 d-flex flex-column">
+  <div class="col-8 d-flex flex-row gap-2">
     <div class=""> 
       <strong>Client id:</strong> <%= @client.clientid %> 
       <strong>ФИО:</strong> <%= @client.fio %> 
@@ -7,9 +7,6 @@
     <div class=""> 
       <strong>Email:</strong> <%= @client.email %> <strong>Phone:</strong> <%= @client.phone %>
     </div>
-  </div>
-  <div class="col-2">
-    <%= link_to reload_icon+" данные из Insales", update_from_insales_client_path(@client), data: {turbo: false}, class: 'btn btn-outline-primary' if @client.clientid %>
   </div>
 </div>
 <% if @client.favorites.present? %>
