--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -8,10 +8,12 @@
   </div>
   <%= search_form_for @search, html: {class: 'form-inline col px-0'}  do |f|%>
     <div class="input-group input-group-sm">
-      <%= f.search_field :clientid_cont_all, placeholder: 'ins ID', class: "form-control"%>
+      <%= f.search_field :clientid_cont_all, placeholder: 'ins ID', class: "form-control", style: 'max-width:120px;'%>
       <%= f.search_field :name_or_surname_or_email_or_phone_cont_all, placeholder: 'ФИО, Email, Телефон', class: "form-control"%>
-      <%= f.select :favorites_client_id_not_null, [['есть',true],['нет',false]], { prompt: 'Избранное'}, class: "form-select" %>
-      <%= f.select :restocks_client_id_not_null, [['есть',true],['нет',false]], { prompt: 'Сообщить о поступлении'}, class: "form-select" %>
+      <%= f.select :favorites_client_id_not_null, [['есть',true],['нет',false]], { prompt: 'Избранное'}, class: "form-select", style: 'max-width:130px;' %>
+      <%= f.select :restocks_client_id_not_null, [['есть',true],['нет',false]], { prompt: 'Сообщить о поступлении'}, class: "form-select", style: 'max-width:170px;' %>
+      <%= f.select :preorders_client_id_not_null, [['есть',true],['нет',false]], { prompt: 'Предзаказ'}, class: "form-select", style: 'max-width:130px;' %>
+      <%= f.select :abandoned_carts_client_id_not_null, [['есть',true],['нет',false]], { prompt: 'Корзина'}, class: "form-select", style: 'max-width:130px;' %>
       <%= button_tag(type: 'submit', :class => "btn btn-outline-primary") do %><%= search_icon %><% end %>
       <%= link_to arrow_clockwise_icon, clients_path(search_cancel: true), class: 'btn btn-outline-dark' %>
     </div>
@@ -19,34 +21,32 @@
   <div class="col-2 gap-2 d-flex align-items-center justify-content-end">
     <%= form_with url: csv_export_clients_path, method: :post, id: :bulk_action_form , class: '' do |f| %>
       <%# f.button "#{button_print} CSV" , type: :submit, class: "btn btn-outline-primary" %>
+      <%= render 'shared/download_excel_buttons', f: f, object: Client.new %>
       <%= render 'shared/bulk_delete_buttons', f: f, object: Client.new %>
     <% end %>
     <%= link_to upload_cloud_icon, file_import_insales_clients_path, id: 'file_import', title: 'Импорт клиентов Insales', data: {turbo_frame: "modal", turbo_stream: true}, class: 'btn btn-outline-info btn-sm' %>
-    <%= link_to export_file_icon, otchet_clients_path, title: "отчет Избранное", class: "btn btn-outline-info btn-sm", role:"button", data: {turbo_method: :get, turbo_stream: true} if Favorite.count.positive? %>
+    <%# link_to export_file_icon, otchet_clients_path, title: "отчет Избранное", class: "btn btn-outline-info btn-sm", role:"button", data: {turbo_method: :get, turbo_stream: true} if Favorite.count.positive? %>
   </div>
 </div>
 
-<div class="table-responsive">
-  <table class="table table-hover table-condensed" data-controller="select-all">
-    <thead>
-      <tr class="bg-success">
-        <th><%= div_check_box_tag_all %></th>
-        <th style="width:120px;">Создан</th>
-        <th>ФИО</th>
-        <th></th>
-        <%=tag.th heart_icon, title: 'Избранное' %>
-        <%=tag.th reload_icon, title: 'Сообщить о поступлении' %>
-        <%=tag.th bell_icon, title: 'Предзаказ' %>
-        <%=tag.th cart_icon, title: 'Корзина' %>
-        <th colspan="1"></th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <%= render @clients %>
-    </tbody>
-  </table>
+<div id="datatables-clients_wrapper" class="mt-3">
+  <%= turbo_stream_from [Apartment::Tenant.current, :clients] %>
+  <%= turbo_frame_tag [Apartment::Tenant.current, :clients], class:"table d-table", data: { controller: "select-all" } do %>
+    <%= tag.div( class: 'd-table-row') do %>
+      <%= tag.div class: 'd-table-cell fw-semibold' do %>
+        <%= div_check_box_tag_all %>
+      <% end %>
+      <%= tag.div( 'ФИО', class: 'd-table-cell fw-semibold' )%>
+      <%= tag.div( 'Телефон, Email', class: 'd-table-cell fw-semibold' )%>
+      <%= tag.div( order_icon, title: 'заказы', class: 'd-table-cell fw-semibold' )%>
+      <%= tag.div( heart_icon, title: 'избранное', class: 'd-table-cell fw-semibold' )%>
+      <%= tag.div( reload_icon, title: 'сообщить о поступлении', class: 'd-table-cell fw-semibold' )%>
+      <%= tag.div( bell_icon, title: 'предзаказ', class: 'd-table-cell fw-semibold' )%>
+      <%= tag.div( cart_icon, title: 'корзина', class: 'd-table-cell fw-semibold' )%>
+      <%= tag.div('', class: 'd-table-cell fw-semibold')%>
+    <% end if @clients.present? %>
+    <%= render @clients %>
+  <% end %>
+  
+  <%= render 'shared/paginate', object: @clients %>
 </div>
-
-<%= render 'shared/paginate', object: @clients %>
-
