--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -6,5 +6,5 @@
 <span>___</span></br>
 <span>С уважением,</span></br>
 <span>служба поддержки</span></br>
-<a href="http://k-comment.ru"><strong>K-comment.ru</strong></a></br>
+<a href="http://myappda.ru"><strong>MyAppDA</strong></a></br>
 <span>Сервис избранных товаров</span></br>
