--- a/app/views/mycases/_form.html.erb
+++ b/app/views/mycases/_form.html.erb
@@ -1,22 +1,25 @@
-
 <div class="col-12 h3 mt-3 mb-3"><%= page_title %></div>
-<%= simple_form_for(@mycase) do |f| %>
-  <%= render 'shared/errors', object: @mycase%>
+<%= form_with(model: @mycase, local: true) do |f| %>
+  <%= render 'shared/errors', object: @mycase %>
 
   <div class="row">
     <div class="col-3">
-      <%= f.input :status, collection: Mycase::STATUS, input_html: {class: "form-select" }, disabled: true if @mycase.casetype == 'restock' || @mycase.casetype == 'preorder' %>
-      <%= f.input :number, disabled: true %>
-      <%#f.association :client, input_html: {class: "form-select" } %>
-      <%= f.input :client_id, collection: Client.collection_for_select(f.object.client_id), class: "form-select", input_html: { class: "form-select" }, disabled: true %>
-      <%= f.input :casetype, collection: Mycase::CASETYPE, input_html: { class: "form-select" }%>
-      <%= f.input :insales_custom_status_title, label: "Статус Ins", disabled: true %>
-      <%= f.input :insales_financial_status, label: "Фин Статус", disabled: true %>
+      <%= f.label :status, class: "form-label" %>
+      <%= f.select :status, Mycase::STATUS, {include_blank: false}, { class: "form-select", disabled: @mycase.casetype == 'restock' || @mycase.casetype == 'preorder' ? true : false} %>
+      <%= f.label :number, class: "form-label mt-1" %>
+      <%= f.text_field :number, disabled: true, class: "form-control" %>
+      <%= f.label :client_id, class: "form-label mt-1" %>
+      <%= f.select :client_id, Client.collection_for_select(f.object.client_id).pluck(:name, :id), {include_blank: false}, { class: "form-select", disabled: true} %>
+      <%= f.label :casetype, class: "form-label mt-1" %>
+      <%= f.select :casetype,  Mycase::CASETYPE, {include_blank: false}, { class: "form-select"} %>
+      <%= f.label :insales_custom_status_title, class: "form-label mt-1" %>
+      <%= f.text_field :insales_custom_status_title, disabled: true, class: "form-control"%>
+      <%= f.label :insales_financial_status, class: "form-label mt-1" %>
+      <%= f.text_field :insales_financial_status, disabled: true, class: "form-control" %>
     </div>
     <div class="col-9 ps-3">
       <div class="table-responsive">
-        <div class="label">Позиции заявки</div>
-        <table class="table table-primary" id="line-table">
+        <table class="table" id="line-table">
           <thead>
             <tr>
               <th></th>
@@ -28,15 +31,17 @@
             </tr>
           </thead>
           <tbody>
-            <% @mycase.lines.each do |line|%>
-              <tr class="line_<%= line.id%>">
-              <td><img src="<%= line.product.image_link %>" style="width:100px;"/></td>
-                <td><%= line.product.title %></td>
-                <td><%= link_to "#{line.variant.insid.to_s }", "http://"+current_user.insints.first.subdomen+"/product_by_id/"+line.variant.product.insid.to_s+"?variant_id="+line.variant.insid.to_s, target: "_blank" %>
-                    <br>Артикул: <%= line.variant.sku.to_s  %></td>
+            <% @mycase.lines.each do |line| %>
+              <tr class="line_<%= line.id %>" style="vertical-align: middle;">
+                <td class="p-0" style="width:100px;vertical-align: middle;">
+                  <%= image_block(line.product.image_link)%>
+                </td>
+                <td><%= link_to line.product.title, line.product, class: 'text-decoration-none text-dark', data: {turbo_frame: 'offcanvas_wrap', turbo_stream: true } %></td>
+                <td><%= link_to "#{line.variant.insid}", "http://#{current_user.insints.first.subdomen}/product_by_id/#{line.variant.product.insid}?variant_id=#{line.variant.insid}", target: "_blank" %>
+                    <br>Артикул: <%= line.variant.sku %></td>
                 <td><%= line.quantity %></td>
                 <td><%= line.price %></td>
-                <%= tag.td line.variant.restocks.where(mycase_id: @mycase.id).first&.status if @mycase.casetype == 'restock'%>
+                <%= tag.td(line.variant.restocks.where(mycase_id: @mycase.id).first&.status, class: 'text-center') if @mycase.casetype == 'restock' %>
               </tr>
             <% end %>
           </tbody>
@@ -46,8 +51,8 @@
   </div>
   <div class="row">
     <div class="col-2 btn-group mt-5">
-      <%= f.button :submit, 'Сохранить', class: 'btn btn-success' %>
-      <%= link_to close_icon, mycases_path, class: 'btn btn-outline-primary'  %>
+      <%= f.submit 'Сохранить', class: 'btn btn-success' %>
+      <%= link_to close_icon, mycases_path, class: 'btn btn-outline-primary' %>
     </div>
   </div>
 <% end %>
