--- a/app/views/mycases/index.html.erb
+++ b/app/views/mycases/index.html.erb
@@ -30,7 +30,7 @@
 
 <div id="datatables-cases_wrapper" class="mt-3">
   <%= turbo_stream_from [Apartment::Tenant.current, :mycases] %>
-  <%= turbo_frame_tag [Apartment::Tenant.current, :mycases], class:"table d-table", data: { controller: "select-all" } do %>
+  <%= tag.div(class:"table d-table", data: { controller: "select-all" } ) do %>
     <%= tag.div( class: 'd-table-row') do %>
       <%=tag.div class: 'd-table-cell fw-semibold' do %>
         <%= div_check_box_tag_all %>
@@ -42,7 +42,9 @@
       <%= tag.div( 'Сумма', class: 'd-table-cell fw-semibold' )%>
       <%= tag.div('', class: 'd-table-cell fw-semibold')%>
      <%end if @mycases.present? %>
-    <%= render @mycases %>
+    <%= turbo_frame_tag [Apartment::Tenant.current, :mycases] do %>
+      <%= render @mycases %>
+    <% end %>
   <% end %>
   
   <%= render 'shared/paginate', object: @mycases %>
