--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -31,7 +31,7 @@
 
 <div id="datatables-clients_wrapper" class="mt-3">
   <%= turbo_stream_from [Apartment::Tenant.current, :clients] %>
-  <%= tag.div( class:"table d-table", data: { controller: "select-all" } ) do %>
+  <%= turbo_frame_tag [Apartment::Tenant.current, :clients], class:"table d-table", data: { controller: "select-all" } do %>
     <%= tag.div( class: 'd-table-row') do %>
       <%= tag.div class: 'd-table-cell fw-semibold' do %>
         <%= div_check_box_tag_all %>
@@ -45,9 +45,7 @@
       <%= tag.div( cart_icon, title: 'корзина', class: 'd-table-cell fw-semibold' )%>
       <%= tag.div('', class: 'd-table-cell fw-semibold')%>
     <% end if @clients.present? %>
-    <%= turbo_frame_tag [Apartment::Tenant.current, :clients] do %>
-      <%= render @clients %>
-    <% end %>
+    <%= render @clients %>
   <% end %>
   
   <%= render 'shared/paginate', object: @clients %>
