--- a/app/views/mycases/index.html.erb
+++ b/app/views/mycases/index.html.erb
@@ -3,7 +3,7 @@
     <div class="h4 m-0">Заявки</div>
     <div class="h6 m-0 small">Всего - <%= Mycase.count%></div>
     <%=tag.div( class: 'h6 m-0 small') do %>
-      <%= page_entries_info(@mycases).to_s.gsub('Mycase','').gsub('entries не найдена','').html_safe %>
+      <%= page_entries_info(@mycases).to_s.gsub('Mycase','').gsub('entries не найдена','').gsub('заявки','').html_safe %>
     <%end %>
   </div>
 
@@ -30,7 +30,7 @@
 
 <div id="datatables-cases_wrapper" class="mt-3">
   <%= turbo_stream_from [Apartment::Tenant.current, :mycases] %>
-  <%= tag.div(class:"table d-table", data: { controller: "select-all" } ) do %>
+  <%= turbo_frame_tag [Apartment::Tenant.current, :mycases], class:"table d-table", data: { controller: "select-all" } do %>
     <%= tag.div( class: 'd-table-row') do %>
       <%=tag.div class: 'd-table-cell fw-semibold' do %>
         <%= div_check_box_tag_all %>
@@ -42,9 +42,7 @@
       <%= tag.div( 'Сумма', class: 'd-table-cell fw-semibold' )%>
       <%= tag.div('', class: 'd-table-cell fw-semibold')%>
      <%end if @mycases.present? %>
-    <%= turbo_frame_tag [Apartment::Tenant.current, :mycases] do %>
-      <%= render @mycases %>
-    <% end %>
+    <%= render @mycases %>
   <% end %>
   
   <%= render 'shared/paginate', object: @mycases %>
