--- a/app/views/insints/_form.html.erb
+++ b/app/views/insints/_form.html.erb
@@ -34,7 +34,7 @@
   <div class="row">
     <div class="col-2 btn-group mt-5">
       <%= f.button :submit, t('save'), class: 'btn btn-success'  %>
-      <%= link_to 'Назад', current_admin ? adminindex_insints_path : dashboard_path, class: 'btn btn-outline-secondary'  %>
+      <%= link_to 'Назад', current_admin ? adminindex_insints_path : dashboards_path, class: 'btn btn-outline-secondary'  %>
     </div>
   </div>
 <% end %>
