--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,9 +1,10 @@
-<% if object&.errors&.full_messages&.any? %>
-  <div class="alert alert-danger">
-    <ul class="mb-0">
-      <% object.errors.full_messages.each do |msg| %>
-        <li><%= t(msg) %></li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
+
+  <% if object&.errors&.full_messages&.any? %>
+    <div class="alert alert-danger">
+      <ul class="mb-0" <%= object.errors.inspect.to_s %> <%= object.errors.as_json.to_s %>>
+        <% object.errors.full_messages.each do |msg| %>
+          <li><%= t(msg) %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
